--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
     <div class="login-container">
 		<h1>Login</h1>
 		<form>
+			<img src="./assets/login profile.png">
 			<label for="email">Email</label>
 			<input type="email" id="email" name="email" placeholder="Enter your email" required>
 			<label for="password">Password:</label>
