--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<form>
 			<img src="./assets/login profile.png">
 			<label for="email">Email</label>
-			<input type="email" id="email" name="email" placeholder="Enter your email" required>
+			<input type="email" id="email" name="email" placeholder="xyz@gmail.com" required>
 			<label for="password">Password:</label>
-			<input type="password" id="password" name="password" placeholder="Enter your password" required>
+			<input type="password" id="password" name="password" placeholder="**********" required>
 			<button type="submit">Login</button>
 			<p id="error-message"></p>
 		</form>
